--- a/demofile1.html
+++ b/demofile1.html
@@ -2,7 +2,7 @@
 <html>
     <meta charset="utf-8" />
 
-    <title>Draw Machine by Killer</title>
+    <title>WebSocket Test</title>
 
     <script type="text/javascript">
     alert("Click Connect on the right to start!")
@@ -33,7 +33,7 @@
 
       //websocket
       document.myform.url.value = "ws://localhost:8000/"
-      document.myform.inputtext.value = "G91 G0 Z7"
+      document.myform.inputtext.value = "Hello World!"
       document.myform.disconnectButton.disabled = true;
 
     }
